--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,7 @@
 <h1>Services DEMO</h1>
 
-<a [routerLink]="['']">HOME</a> |
-<a [routerLink]="['tasks']">TASKS</a> |
-<a [routerLink]="['log']">LOG</a> |
-
-{{timer.getCount()}}s
+<a [routerLink]="['']">HOME</a> | <a [routerLink]="['tasks']">TASKS</a> |
+<a [routerLink]="['log']">LOG</a> | {{timer.getCount()}}s
 
 <button (click)="timer.start(1000)">Start</button>
 <button (click)="timer.stop()">Stop</button>
